--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ nav{
 }
 .tab{
     display: flex;
-    gap: 1vw;
-    margin: auto 7vw auto 15vw;
+    gap: 1.5vw;
+    margin: auto 8vw auto 13vw;
+    font-size: 20px;
+}
+
+.search{
+    display: flex;
+    font-size: 20px;
+    gap: 5px;
+    margin-right: 3vh;
+}
+.inp{
+    border-radius: 5px;
+    height: 3vh;
+}
+.self{
+border-radius: 3px;
 }
